--- a/public/locales/en/sidebar.json
+++ b/public/locales/en/sidebar.json
@@ -18,7 +18,7 @@
     "CategoryPage":"Category",
     "PostPage":"Post",
     "ReportTitle":"Website Reports",
-    "ReportPage":"Income report",
+    "ReportsPage":"Reports",
     "SettingsTitle":"Configuration",
     "WebInfoPage": "Web Information",
     "LanguagePage": "Language Config",
