--- a/public/locales/th/sidebar.json
+++ b/public/locales/th/sidebar.json
@@ -18,7 +18,7 @@
     "CategoryPage":"หมวดหมู่",
     "PostPage":"บทความ",
     "ReportTitle":"รายงานเว็บไซต์",
-    "ReportPage":"รายงานรายได้",
+    "ReportsPage":"จัดการรายงาน",
     "SettingsTitle":"การตั้งค่า",
     "WebInfoPage": "ข้อมูลเว็บไซต์",
     "LanguagePage": "ปรับแต่งภาษา",
