--- a/public/locales/en/product-page.json
+++ b/public/locales/en/product-page.json
@@ -9,7 +9,7 @@
   "None": "",
   "ModalSlcCtronrolPage": "PageControl",
   "ModalPriority": "priority",
-  "ModalDisplayStatus": "Not show",
+  "ModalDisplayStatus": "Display",
   "btnAddProduct": "Add Product",
   "ModalSlcCategory": "Category",
   "ModalCanWaveStatus": "Microwave",
