--- a/public/locales/ind/product-cate-page.json
+++ b/public/locales/ind/product-cate-page.json
@@ -9,7 +9,7 @@
   "None": "",
   "ModalSlcCtronrolPage": "PageControl",
   "ModalPriority": "priority",
-  "ModalDisplayStatus": "การแสดงผล",
+  "ModalDisplayStatus": "Display",
   "ModalFoodStatus": "หมวดหมู่สำหรับอาหาร",
   "btnAddProduct": "AddProduct",
   "productEdit": "แก้ไขหมวดหมู่สินค้า",
