--- a/public/locales/th/product-page.json
+++ b/public/locales/th/product-page.json
@@ -9,7 +9,7 @@
   "None": "",
   "ModalSlcCtronrolPage": "PageControl",
   "ModalPriority": "priority",
-  "ModalDisplayStatus": "ไม่แสดงผล",
+  "ModalDisplayStatus": "การแสดงผล",
   "btnAddProduct": "เพิ่มสินค้า",
   "ModalSlcCategory": "Category",
   "ModalCanWaveStatus": "เข้าไมโครเวฟได้",
